# boke

./: .gitignore  LICENSE  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  tsconfig.base.json  v0.2.0-CHANGELOG.md  v0.3.0-CHANGELOG.md  v0.4.0-CHANGELOG.md
.cursor/skills/flex-group-alignment/: SKILL.md
.cursor/skills/git-sync/: SKILL.md  reference.md
.cursor/skills/start-boke/: SKILL.md
.cursor/skills/start-desktop/: SKILL.md
.cursor/skills/start-web/: SKILL.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: ensure-vite-dev.mjs  prepare-os-icon.mjs  process-logo.mjs
apps/desktop/src/: main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: main.tsx
docs/: architecture.md  cloud-storage.md  plugin-guide.md  self-host.md
examples/plugins/hello-world/: main.js  manifest.json
examples/sample-vault/.boke/plugins/hello-world/: main.js
examples/sample-vault/.chestnut/plugins/hello-world/: main.js  manifest.json
examples/sample-vault/notes/: Getting Started.md  Published Post.md  Sample Drawing.excalidraw  Welcome.md
scripts/: clean-desktop-build.mjs  start-web.bat  start-web.sh
server/: .env.example  README.md  main.py  nginx.conf.example
tools/: check-page.mjs
