[package]
name = "boke-desktop"
version = "0.1.0"
description = "Boke Knowledge Manager Desktop"
authors = ["Boke Contributors"]
edition = "2021"

[lib]
name = "boke_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
