[package]
name = "chestnut-desktop"
version = "0.2.0"
description = "Chestnut Editor Desktop"
authors = ["Chestnut Contributors"]
edition = "2021"

[lib]
name = "chestnut_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
opener = { version = "0.7", features = ["reveal"] }
trash = "5"
tauri-plugin-clipboard-manager = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
